// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/TemplatesList creates a form for the 'Import' special item 1`] = `
<div
  className="mdc-layout-grid"
>
  <div
    className="mdc-layout-grid__inner"
  >
    <div
      className="tpl-templateBox mdc-layout-grid__cell mdc-layout-grid__cell--span-2"
    >
      <div
        className="tpl-anchor"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="tpl-infoC selectedListItem"
        >
          <div
            className="tpl-imgCell"
          >
            <form>
              <div
                className="fileInput"
              >
                <i
                  className="material-icons"
                >
                  cloud_upload
                </i>
                <input
                  accept={null}
                  onChange={[Function]}
                  type="file"
                />
              </div>
            </form>
          </div>
          <div
            className="tpl-textCell"
          >
            <b>
              Import
            </b>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/TemplatesList marks an item as selected 1`] = `
<div
  className="mdc-layout-grid"
>
  <div
    className="mdc-layout-grid__inner"
  >
    <div
      className="tpl-templateBox mdc-layout-grid__cell mdc-layout-grid__cell--span-2"
    >
      <div
        className="tpl-anchor"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="tpl-infoC selectableListItem"
        >
          <div
            className="tpl-imgCell"
          >
            <img
              alt="template 1"
              className="tpl-img"
              src="./images/robots/robot-0.svg"
            />
          </div>
          <div
            className="tpl-textCell"
          >
            <b>
              template 1
            </b>
          </div>
        </div>
      </div>
    </div>
    <div
      className="tpl-templateBox mdc-layout-grid__cell mdc-layout-grid__cell--span-2"
    >
      <div
        className="tpl-anchor"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="tpl-infoC selectedListItem"
        >
          <div
            className="tpl-imgCell"
          >
            <img
              alt="template 2"
              className="tpl-img"
              src="./images/robots/robot-1.svg"
            />
          </div>
          <div
            className="tpl-textCell"
          >
            <b>
              template 2
            </b>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/TemplatesList renders correctly 1`] = `
<div
  className="mdc-layout-grid"
>
  <div
    className="mdc-layout-grid__inner"
  />
</div>
`;

exports[`components/TemplatesList renders some items 1`] = `
<div
  className="mdc-layout-grid"
>
  <div
    className="mdc-layout-grid__inner"
  >
    <div
      className="tpl-templateBox mdc-layout-grid__cell mdc-layout-grid__cell--span-2"
    >
      <div
        className="tpl-anchor"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="tpl-infoC selectedListItem"
        >
          <div
            className="tpl-imgCell"
          >
            <img
              alt="template 1"
              className="tpl-img"
              src="./images/robots/robot-0.svg"
            />
          </div>
          <div
            className="tpl-textCell"
          >
            <b>
              template 1
            </b>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/TemplatesList renders without selected template 1`] = `
<div
  className="mdc-layout-grid"
>
  <div
    className="mdc-layout-grid__inner"
  >
    <div
      className="tpl-templateBox mdc-layout-grid__cell mdc-layout-grid__cell--span-2"
    >
      <div
        className="tpl-anchor"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="tpl-infoC selectableListItem"
        >
          <div
            className="tpl-imgCell"
          >
            <img
              alt="Template 1"
              className="tpl-img"
              src="./images/robots/robot-0.svg"
            />
          </div>
          <div
            className="tpl-textCell"
          >
            <b>
              Template 1
            </b>
          </div>
        </div>
      </div>
    </div>
    <div
      className="tpl-templateBox mdc-layout-grid__cell mdc-layout-grid__cell--span-2"
    >
      <div
        className="tpl-anchor"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="tpl-infoC selectableListItem"
        >
          <div
            className="tpl-imgCell"
          >
            <img
              alt="Template 2"
              className="tpl-img"
              src="./images/robots/robot-1.svg"
            />
          </div>
          <div
            className="tpl-textCell"
          >
            <b>
              Template 2
            </b>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
